tests/rosetta/out/Java/burrows-wheeler-transform.error
javac: exit status 1
/tmp/BurrowsWheelerTransform.java:6: error: illegal escape character
    static String stx = "\x02";
                          ^
/tmp/BurrowsWheelerTransform.java:7: error: illegal escape character
    static String etx = "\x03";
                          ^
/tmp/BurrowsWheelerTransform.java:98: error: illegal escape character
        List<String> examples = new ArrayList<>(Arrays.asList("banana", "appellee", "dogwood", "TO BE OR NOT TO BE OR WANT TO BE OR NOT?", "SIX.MIXED.PIXIES.SIFT.SIXTY.PIXIE.DUST.BOXES", "\x02ABC\x03"));
                                                                                                                                                                                             ^
/tmp/BurrowsWheelerTransform.java:98: error: illegal escape character
        List<String> examples = new ArrayList<>(Arrays.asList("banana", "appellee", "dogwood", "TO BE OR NOT TO BE OR WANT TO BE OR NOT?", "SIX.MIXED.PIXIES.SIFT.SIXTY.PIXIE.DUST.BOXES", "\x02ABC\x03"));
                                                                                                                                                                                                    ^
4 errors
